--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@
 
 html,
 body {
+  background-color: #1c2128;
+  color: #c7cfda;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
