--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  background-color: #1c2128;
+  background-color: #111827;
   color: #c7cfda;
   padding: 0;
   margin: 0;
@@ -19,6 +19,10 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+input {
+  background-color: #111827;
 }
 
 pre.__json-pretty__ {
@@ -39,6 +43,7 @@ pre.__json-pretty__ > span.__json-string__ {
 .fade {
   animation: fade-in 0.2s ease-in;
 }
+
 @keyframes fade-in {
   0% {
     opacity: 0;
@@ -46,4 +51,10 @@ pre.__json-pretty__ > span.__json-string__ {
   100% {
     opacity: 1;
   }
+}
+
+.text-ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
